[gd_scene load_steps=2 format=3 uid="uid://dapappid8sien"]

[ext_resource type="Script" uid="uid://cgq7lhdvrtcvr" path="res://scripts/HUD.gd" id="1_qpvh6"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_qpvh6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.097
anchor_bottom = 0.031000001
offset_left = 6.0
offset_right = -65.744
offset_bottom = 19.911999
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PowerLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.6
anchor_bottom = 0.57500005
text = "0"

[node name="TrackShotCountLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.025
anchor_right = 1.4000001
anchor_bottom = 0.57500005
offset_left = -1.0
offset_top = -1.0
offset_right = 3.9999962
grow_horizontal = 2
text = "0"

[node name="TotalShotCountLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.8750001
anchor_right = 2.8750002
anchor_bottom = 0.5
offset_right = 0.9999924
text = "0"
